2001-08-05  Max Horn <max@quendi.de>
	* keys.cc, gumps/Gamemenu.cc: added forgotten #include "exult.h"

2001-08-05  Max Horn <max@quendi.de>
	* shapes/bodies.cc/h: moved Is_body from gamewin.cc to here
	* bggame.cc: added missing prototypes (making compiler happy)
	* exult.h: added, allowed to remove "extern ..." in many files
	* various files: updated legal headers; removed extern's; and other clean up

2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: compiles on Linux again

2001-08-05  Max Horn <max@quendi.de>
	* files/utils.cc/.h: added missing prototypes
	* conf/XMLEntity.c/.h: removed class XMLEntity; added XMLNode methods dump, xmlassign and xmlparse
	* conf/xmldump.cc, conf/xmlparse.cc: removed
	* conf/Configuration.cc: make use of new XMLNode methods dump/xmlassign/xmlparse
	* exult_constants.h: added c_empty_string constant
	* desktop/exult.png: new picture
	* mac/*: updated/added various mac specific files
	* various files: updated legal headers

2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixed serpent ring/ring naming problem
	* game.*, gamewin.cc, exult.cc: fixed 'return to menu' problem with SFX
	* vid_resolution.shp: 512x348 -> 512x384
	* schedule.cc: don't use frame 15 for dancing; many NPCs don't have it,
	also fixed movement bug in Dance_schedule

2001-08-05  Max Horn <max@quendi.de>
	* flic/playfli.h: was not double include protected! (caused troubles when using precompile headers)

2001-08-05  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,actors.cc,actorio.cc:  Turn off 'flee' mode when
	switching to combat unless user explicitly choose 'flee'.

	* audio/Audio.h (public): Got rid of annoying warning.
	* conversation.cc: No face for Smith the Nightmare.
	* keyactions.cc: Applied Put_click() patch for keys.

2001-08-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: fixed 'return to menu' after 'start new game' bug